# mhv

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env.sample  install_service.sh  miya.service  start_miya.sh  test_curiosity.py  watchdog.sh  watchdog_ai.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  version.py
backend/app/agents/: __init__.py  api_agent.py  app_builder_agent.py  art_director_agent.py  backend_agent.py  base_agent.py  chat_agent.py  code_agent.py  code_debugger_agent.py  code_debugging_agent.py  code_execution_agent.py  code_explainer_agent.py  code_for_text_generation_agent.py  code_generation_agent.py  code_generation_agent_agent.py  code_generation_for_simple_tasks_agent.py  code_generator_agent.py  code_optimization_agent.py  code_prompt_agent_agent.py  code_tutorial_agent.py  code_writing_agent_agent.py  collaboration_agent.py  creative_agent.py  data_agent.py  devops_agent.py  document_agent.py  email_agent.py  file_manager_agent.py  finetune_agent.py  frontend_agent.py  gpu_manager_agent.py  image_gen_agent.py  learning_agent.py  math_agent.py  memory_manager_agent.py  meta_agent.py  monitor_agent.py  music_agent.py  naroscom_agent_agent.py  notification_agent.py  (+21 more)
backend/app/api/: __init__.py  auth.py  models.py  routes.py  websocket.py
backend/app/core/: __init__.py  event_bus.py  host_system.py  llm_engine.py  llm_router.py  orchestrator.py  task_queue.py
backend/models/: README.md
backend/scripts/: download_models.sh  init_db.py  setup_gpu.sh
docs/: API.md  TOOLS.md
(+91 files in other folders)
